# backend/docs/swagger.json
@@ -246,7 +246,7 @@
                     "200": {
                         "description": "список файлов",
                         "schema": {
-                            "$ref": "#/definitions/service.FilesInfo"
+                            "$ref": "#/definitions/service.FilesResponce"
                         }
                     },
                     "400": {
@@ -322,6 +322,53 @@
                         "description": "дерево папок",
                         "schema": {
                             "$ref": "#/definitions/filesmanager.Dir"
+                        }
+                    }
+                }
+            }
+        },
+        "/Search": {
+            "post": {
+                "description": "Поиск по тегам в папке",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "file"
+                ],
+                "summary": "Поиск по тегам в папке",
+                "operationId": "Search",
+                "parameters": [
+                    {
+                        "description": "Путь до папки",
+                        "name": "SearchData",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/service.SearchRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "список файлов",
+                        "schema": {
+                            "$ref": "#/definitions/service.SearchResponce"
+                        }
+                    },
+                    "400": {
+                        "description": "error",
+                        "schema": {
+                            "$ref": "#/definitions/service.ResponceError"
+                        }
+                    },
+                    "500": {
+                        "description": "error",
+                        "schema": {
+                            "$ref": "#/definitions/service.ResponceError"
                         }
                     }
                 }
@@ -429,16 +476,10 @@
         "filesmanager.Dir": {
             "type": "object",
             "properties": {
-                "content": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/filesmanager.Dir"
-                    }
-                },
-                "dir": {
+                "name": {
                     "type": "string"
                 },
-                "name": {
+                "path": {
                     "type": "string"
                 }
             }
@@ -471,13 +512,19 @@
                 }
             }
         },
-        "service.FilesInfo": {
+        "service.FilesResponce": {
             "type": "object",
             "properties": {
                 "files": {
                     "type": "array",
                     "items": {
                         "$ref": "#/definitions/filesmanager.Content"
+                    }
+                },
+                "tagsInDir": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
                     }
                 }
             }
@@ -499,7 +546,7 @@
                 "dirs": {
                     "type": "array",
                     "items": {
-                        "type": "string"
+                        "$ref": "#/definitions/filesmanager.Dir"
                     }
                 }
             }
@@ -525,6 +572,31 @@
                     "type": "array",
                     "items": {
                         "type": "string"
+                    }
+                }
+            }
+        },
+        "service.SearchRequest": {
+            "type": "object",
+            "properties": {
+                "dir": {
+                    "type": "string"
+                },
+                "tag": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                }
+            }
+        },
+        "service.SearchResponce": {
+            "type": "object",
+            "properties": {
+                "files": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/filesmanager.Content"
                     }
                 }
             }
